data/derived/comb/progs/unify/prog3152.ml.out
Characters 28-62:
  wwhile (fun x -> (f b,not ((f b) = b)),b);;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
